[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "prosail_pro"
version = "1.0.0"
authors = [
  { name = "CRUN" },
  { name = "J-B Feret (PROSPECT-PRO)" },
  { name = "J Gomez-Dans (PROSAIL)" }
]
description = "PROSAIL-PRO: PROSPECT-PRO + SAIL radiative transfer models"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.19.0",
    "scipy>=1.5.0",
]

[tool.setuptools]
packages = ["prosail_pro"]

[tool.setuptools.package-data]
prosail_pro = ["*.txt"]
